Fixed when no company quote - Improved values passing between funcs

--- a/ASE-Filings-Twitter-bot-Python-code.ipynb
+++ b/ASE-Filings-Twitter-bot-Python-code.ipynb
@@ -67,15 +67,15 @@
     "    # BeautifulSoup reads the DOM of the HTML code and allows us to grab certain parts by their tags\n",
     "    container = doc.find_all('div', attrs={'id':'fullist_abstracts'})[0]\n",
     "\n",
-    "    # Make each variable global, so we are able to use them in other functions\n",
-    "    global company_names\n",
     "    company_names = container.find_all('h1', attrs={'class':'header-title'})\n",
     "    # List comprehension for each variable, so we can use them for building a dataframe later\n",
     "    company_names = [company.text for company in company_names]\n",
     "\n",
-    "    global company_quotes\n",
-    "    company_quotes = container.find_all('a', attrs={'class':'stock-link'})\n",
-    "    company_quotes = [quote.text for quote in company_quotes]\n",
+    "    ## List of the companies quote symbol\n",
+    "    ## First find the nesting div\n",
+    "    stock_link_div = container.find_all('div', attrs={'class':'asset-date'})\n",
+    "    ## Extract quote symbol if exists, add an empty [] if it doesn't\n",
+    "    company_quotes = [adiv.a.text if adiv.a is not None else '[]' for adiv in stock_link_div]\n",
     "\n",
     "    timestamps_all = container.find_all('div', attrs={'class':'popup-an-date'})\n",
     "    # Date for each announcement is in a HH:HH format when they're published\n",
@@ -84,19 +84,17 @@
     "    date = time.strftime('%d %b %Y', time.localtime(time.time())) + \" \"\n",
     "    # If the mined date is already in HH:HH DD MMM YY format append it to the list with no changes\n",
     "    # If it's in HH:HH format (less than 10 characters) add the DD MMM YY format and append it\n",
-    "    global timestamps\n",
     "    timestamps = [stamp.text + date if len(stamp.text) < 10 else stamp.text for stamp in timestamps_all]\n",
     "    \n",
-    "    global titles\n",
     "    titles = container.find_all('a', attrs={'data-google-analytics-tag':'Companies_Announcements'})\n",
     "    titles = [title.text for title in titles]\n",
     "\n",
-    "    global links\n",
     "    links = container.find_all('a', attrs={'data-google-analytics-tag':'Companies_Announcements'})\n",
     "    # Some string manipulation to extract the plain URL of each announcement\n",
     "    links = ['http://' + link['ontouchstart'].split('http://')[1].split('/exclusive')[0] for link in links]\n",
     "\n",
-    "mine_data()"
+    "    ## Return the collected data\n",
+    "    return company_names, timestamps, titles, company_quotes, links"
    ]
   },
   {
@@ -518,6 +516,9 @@
    ],
    "source": [
     "def build_dataframe():\n",
+    "    ## Return the collected data from the mine_data function\n",
+    "    company_names, timestamps, titles, company_quotes, links = mine_data()\n",
+    "    \n",
     "    global mined\n",
     "    mined = pd.DataFrame(data={'quote': company_quotes, 'title': titles, 'timestamp': timestamps, 'link': links})\n",
     "    # Regex on timestamp to get rid of blanks and seperate time from date\n",
